Fixed router - home ctrl and redirection based on user status Added angular-messages to the project

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
+	<script src="bower_components/angular-messages/angular-messages.js"></script>
 	<!-- JS Frameworks and Libraries: end -->
 
 	<!-- App: start -->
@@ -28,7 +29,7 @@
 	<script src="app/public/login/login.ctrl.js"></script>
 	<!-- App: end -->
 </head>
-<body ng-controller="MainCtrl as main">
+<body ng-controller="HomeCtrl as main">
 <div ng-view></div>
 </body>
 </html>
