Implemented dashboard list page Refactored dashboard layout

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 	<!-- CSS App: start -->
 	<link href="app/public/login/login.css" rel="stylesheet">
+	<link href="app/common/grid/grid.css" rel="stylesheet">
 	<!-- CSS App: end -->
 
 	<!-- JS Frameworks and Libraries: start -->
@@ -24,6 +25,20 @@
 	<!-- Common -->
 	<script src="app/common/module.js"></script>
 	<script src="app/common/auth/user.serv.js"></script>
+	<script src="app/common/components/focus-on.directive.js"></script>
+	<!-- Common Grid component -->
+	<script src="app/common/grid/module.js"></script>
+	<script src="app/common/grid/grid.directive.js"></script>
+	<script src="app/common/grid/grid-column.directive.js"></script>
+	<script src="app/common/grid/grid-column-string.directive.js"></script>
+	<script src="app/common/grid/grid-column-boolean.directive.js"></script>
+	<script src="app/common/grid/grid-column-delete.directive.js"></script>
+	<script src="app/common/grid/grid-column-edit.directive.js"></script>
+	<script src="app/common/grid/grid-toolbar.directive.js"></script>
+	<script src="app/common/grid/grid-toolbar-string.directive.js"></script>
+	<script src="app/common/grid/grid-toolbar-boolean.directive.js"></script>
+	<script src="app/common/grid/grid-toolbar-delete.directive.js"></script>
+	<script src="app/common/grid/grid-toolbar-edit.directive.js"></script>
 	<!-- Public -->
 	<script src="app/public/module.js"></script>
 	<script src="app/public/login/login.ctrl.js"></script>
@@ -31,6 +46,10 @@
 	<script src="app/dashboard/module.js"></script>
 	<script src="app/dashboard/layout/layout.ctrl.js"></script>
 	<script src="app/dashboard/home/home.ctrl.js"></script>
+	<!-- Dashboard SuperHeroes -->
+	<script src="app/dashboard/superheroes/module.js"></script>
+	<script src="app/dashboard/superheroes/layout/layout.ctrl.js"></script>
+	<script src="app/dashboard/superheroes/list/list.ctrl.js"></script>
 	<!-- App: end -->
 </head>
 <body>
