Implemented dashboard edit page Refactored dashboard list page and rest services mocks

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
 	<script src="app/index.js"></script>
 	<!-- Common -->
 	<script src="app/common/module.js"></script>
-	<script src="app/common/auth/user.serv.js"></script>
+	<script src="app/common/rest/user.serv.js"></script>
+	<script src="app/common/rest/superhero.serv.js"></script>
 	<script src="app/common/components/focus-on.directive.js"></script>
 	<!-- Common Grid component -->
 	<script src="app/common/grid/module.js"></script>
@@ -50,6 +51,7 @@
 	<script src="app/dashboard/superheroes/module.js"></script>
 	<script src="app/dashboard/superheroes/layout/layout.ctrl.js"></script>
 	<script src="app/dashboard/superheroes/list/list.ctrl.js"></script>
+	<script src="app/dashboard/superheroes/form/form.ctrl.js"></script>
 	<!-- App: end -->
 </head>
 <body>
