--- a/index.html
+++ b/index.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html ng-app="realine">
 <head>
-	<base href="/index.html">
+	<base href="/realine-test-spa/index.html">
 	<title>Realine</title>
 	<!-- CSS Frameworks and Libraries: start -->
-	<link href="/components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+	<link href="/realine-test-spa/components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 	<!-- CSS Frameworks and Libraries: end -->
 
 	<!-- CSS App: start -->
-	<link href="/app/public/login/login.css" rel="stylesheet">
-	<link href="/app/common/grid/grid.css" rel="stylesheet">
+	<link href="/realine-test-spa/app/public/login/login.css" rel="stylesheet">
+	<link href="/realine-test-spa/app/common/grid/grid.css" rel="stylesheet">
 	<!-- CSS App: end -->
 
 	<!-- JS Frameworks and Libraries: start -->
-	<script src="/components/jquery/dist/jquery.js"></script>
-	<script src="/components/bootstrap/dist/js/bootstrap.js"></script>
-	<script src="/components/angular/angular.js"></script>
-	<script src="/components/angular-messages/angular-messages.js"></script>
-	<script src="/components/angular-ui-router/release/angular-ui-router.js"></script>
+	<script src="/realine-test-spa/components/jquery/dist/jquery.js"></script>
+	<script src="/realine-test-spa/components/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="/realine-test-spa/components/angular/angular.js"></script>
+	<script src="/realine-test-spa/components/angular-messages/angular-messages.js"></script>
+	<script src="/realine-test-spa/components/angular-ui-router/release/angular-ui-router.js"></script>
 	<!-- JS Frameworks and Libraries: end -->
 
 	<!-- App: start -->
-	<script src="/app/index.js"></script>
+	<script src="/realine-test-spa/app/index.js"></script>
 	<!-- Common -->
-	<script src="/app/common/module.js"></script>
-	<script src="/app/common/rest/user.serv.js"></script>
-	<script src="/app/common/rest/superhero.serv.js"></script>
-	<script src="/app/common/components/focus-on.directive.js"></script>
+	<script src="/realine-test-spa/app/common/module.js"></script>
+	<script src="/realine-test-spa/app/common/rest/user.serv.js"></script>
+	<script src="/realine-test-spa/app/common/rest/superhero.serv.js"></script>
+	<script src="/realine-test-spa/app/common/components/focus-on.directive.js"></script>
 	<!-- Common Grid component -->
-	<script src="/app/common/grid/module.js"></script>
-	<script src="/app/common/grid/grid.directive.js"></script>
-	<script src="/app/common/grid/grid-column.directive.js"></script>
-	<script src="/app/common/grid/grid-column-string.directive.js"></script>
-	<script src="/app/common/grid/grid-column-boolean.directive.js"></script>
-	<script src="/app/common/grid/grid-column-delete.directive.js"></script>
-	<script src="/app/common/grid/grid-column-edit.directive.js"></script>
-	<script src="/app/common/grid/grid-toolbar.directive.js"></script>
-	<script src="/app/common/grid/grid-toolbar-string.directive.js"></script>
-	<script src="/app/common/grid/grid-toolbar-boolean.directive.js"></script>
-	<script src="/app/common/grid/grid-toolbar-delete.directive.js"></script>
-	<script src="/app/common/grid/grid-toolbar-edit.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/module.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-column.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-column-string.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-column-boolean.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-column-delete.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-column-edit.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-toolbar.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-toolbar-string.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-toolbar-boolean.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-toolbar-delete.directive.js"></script>
+	<script src="/realine-test-spa/app/common/grid/grid-toolbar-edit.directive.js"></script>
 	<!-- Public -->
-	<script src="/app/public/module.js"></script>
-	<script src="/app/public/login/login.ctrl.js"></script>
+	<script src="/realine-test-spa/app/public/module.js"></script>
+	<script src="/realine-test-spa/app/public/login/login.ctrl.js"></script>
 	<!-- Dashboard -->
-	<script src="/app/dashboard/module.js"></script>
-	<script src="/app/dashboard/layout/layout.ctrl.js"></script>
-	<script src="/app/dashboard/home/home.ctrl.js"></script>
+	<script src="/realine-test-spa/app/dashboard/module.js"></script>
+	<script src="/realine-test-spa/app/dashboard/layout/layout.ctrl.js"></script>
+	<script src="/realine-test-spa/app/dashboard/home/home.ctrl.js"></script>
 	<!-- Dashboard SuperHeroes -->
-	<script src="/app/dashboard/superheroes/module.js"></script>
-	<script src="/app/dashboard/superheroes/layout/layout.ctrl.js"></script>
-	<script src="/app/dashboard/superheroes/list/list.ctrl.js"></script>
-	<script src="/app/dashboard/superheroes/form/form.ctrl.js"></script>
+	<script src="/realine-test-spa/app/dashboard/superheroes/module.js"></script>
+	<script src="/realine-test-spa/app/dashboard/superheroes/layout/layout.ctrl.js"></script>
+	<script src="/realine-test-spa/app/dashboard/superheroes/list/list.ctrl.js"></script>
+	<script src="/realine-test-spa/app/dashboard/superheroes/form/form.ctrl.js"></script>
 	<!-- App: end -->
 </head>
 <body>
