--- a/app/dashboard/home/home.html
+++ b/app/dashboard/home/home.html
@@ -1,7 +1,7 @@
 <div ng-controller="DashboardHomeCtrl as home">
 	<div class="media">
 		<div class="media-left">
-			<img class="media-object" src="/assets/images/user.png" alt="User avatar">
+			<img class="media-object" src="/realine-test-spa/assets/images/user.png" alt="User avatar">
 		</div>
 		<div class="media-body">
 			<h4 class="media-heading">{{home.user.bio.fullName}}</h4>
