Added form validation to superheroes form

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<!-- CSS App: start -->
 	<link href="app/public/login/login.css" rel="stylesheet">
 	<link href="app/common/grid/grid.css" rel="stylesheet">
+	<link href="app/dashboard/superheroes/form/form.css" rel="stylesheet">
 	<!-- CSS App: end -->
 
 	<!-- JS Frameworks and Libraries: start -->
@@ -27,6 +28,7 @@
 	<script src="app/common/rest/user.serv.js"></script>
 	<script src="app/common/rest/superhero.serv.js"></script>
 	<script src="app/common/components/focus-on.directive.js"></script>
+	<script src="app/common/components/decimal.directive.js"></script>
 	<!-- Common Grid component -->
 	<script src="app/common/grid/module.js"></script>
 	<script src="app/common/grid/grid.directive.js"></script>
