--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="realine">
 <head>
-	<base href="/realine-test-spa/index.html">
+	<base href="/index.html">
 	<title>Realine</title>
 	<!-- CSS Frameworks and Libraries: start -->
 	<link href="/realine-test-spa/components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
@@ -10,6 +10,7 @@
 	<!-- CSS App: start -->
 	<link href="/realine-test-spa/app/public/login/login.css" rel="stylesheet">
 	<link href="/realine-test-spa/app/common/grid/grid.css" rel="stylesheet">
+	<link href="/realine-test-spa/app/dashboard/superheroes/form/form.css" rel="stylesheet">
 	<!-- CSS App: end -->
 
 	<!-- JS Frameworks and Libraries: start -->
@@ -27,6 +28,7 @@
 	<script src="/realine-test-spa/app/common/rest/user.serv.js"></script>
 	<script src="/realine-test-spa/app/common/rest/superhero.serv.js"></script>
 	<script src="/realine-test-spa/app/common/components/focus-on.directive.js"></script>
+	<script src="/realine-test-spa/app/common/components/decimal.directive.js"></script>
 	<!-- Common Grid component -->
 	<script src="/realine-test-spa/app/common/grid/module.js"></script>
 	<script src="/realine-test-spa/app/common/grid/grid.directive.js"></script>
