Changed base tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="realine">
 <head>
-	<base href="/index.html">
+	<base href="/realine-test-spa/index.html">
 	<title>Realine</title>
 	<!-- CSS Frameworks and Libraries: start -->
 	<link href="/realine-test-spa/components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
